starship: show python venv

--- a/etc/skel/.config/starship.toml
+++ b/etc/skel/.config/starship.toml
@@ -267,7 +267,7 @@ format = "via [$symbol$stack]($style)"
 format = "via [$symbol]($style)"
 
 [python]
-format = "via [$symbol]($style)"
+# format = "via [$symbol]($style)"
 symbol = " "
 
 [quarto]
